[gd_scene load_steps=6 format=3 uid="uid://38rlvcun0e8k"]

[ext_resource type="Script" uid="uid://ct14oobeb31q4" path="res://Scripts/wood.gd" id="1_dpcgu"]
[ext_resource type="Texture2D" uid="uid://blh045hk1y8q0" path="res://Sprites/kenney_top-down-shooter/Tilesheet/tilesheet_complete_2X.png" id="1_pv4rj"]
[ext_resource type="Texture2D" uid="uid://b240e3bpkat73" path="res://icon.svg" id="3_sleua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npnt8"]
size = Vector2(35, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fh3f"]
size = Vector2(57, 114)

[node name="Wood" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_dpcgu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_npnt8")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.5, 0)
scale = Vector2(0.273438, 1)
texture = ExtResource("3_sleua")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pv4rj")
region_enabled = true
region_rect = Rect2(1500, 2048, 37, 128)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1fh3f")

[node name="TimerDamage" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TimerFix" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TimerDamage" to="." method="_on_timer_damage_timeout"]
[connection signal="timeout" from="TimerFix" to="." method="_on_timer_fix_timeout"]
